# hi

./: .gitignore  Cargo.toml  README.md  hi.toml
crates/hi-agent/: .hi-verify-proactive-31468-4.py  Cargo.toml
crates/hi-agent/src/: change_ledger.rs  coding_memory.rs  command.rs  compaction.rs  config.rs  context_index.rs  decision.rs  doctor.rs  domain.rs  goal.rs  heuristics.rs  lib.rs  local_skeptic.rs  memory.rs  observation.rs  outcome.rs  prerequisites.rs  prompt.rs  session.rs  session_ops.rs  skills.rs  snapshot.rs  steering.rs  subagent.rs  task_contract.rs  tests.rs  transcript.rs  ui.rs  verify.rs  workspace_runtime.rs
crates/hi-agent/src/agent/: audit_goal.rs  background_task.rs  coding_memory_turn.rs  compaction_turn.rs  curate_turn.rs  delegate_turn.rs  explore_turn.rs  goal_turn.rs  lifecycle.rs  memory_turn.rs  mod.rs  mutation_recovery_turn.rs  plan_goal.rs  preflight.rs  skeptic.rs  tool_selection.rs  trio.rs  turn.rs
crates/hi-agent/src/steering/: constants.rs  implementation.rs  intent.rs  mod.rs  mutation_recovery.rs  nudges.rs  preflight.rs  review_repair.rs  tool_guardrail.rs  types.rs
crates/hi-agent/src/tests/: background_task.rs  common.rs  compaction.rs  curate.rs  decision.rs  delegate.rs  explore.rs  finalize.rs  goal.rs  goal_contract.rs  local_skeptic.rs  memory.rs  mutation_recovery.rs  outcome.rs  plan.rs  protocol_import_lint.rs  retry.rs  scheduler.rs  steering.rs  (+5 more)
crates/hi-ai/: Cargo.toml
crates/hi-ai/src/: anthropic.rs  auth_store.rs  circuit_breaker.rs  fallback.rs  http.rs  huggingface.rs  lib.rs  mcp.rs  moa.rs  openai.rs  pipenetwork_auth.rs  provider.rs  registry.rs  test_support.rs  token.rs  tool_validation.rs  types.rs  xai_auth.rs
crates/hi-cli/: Cargo.toml
crates/hi-cli/src/: agent_build.rs  bestof.rs  bootstrap.rs  candidate_gate.rs  candidate_merge.rs  child_process.rs  commands.rs  complete.rs  config.rs  delegate.rs  delegate_tests.rs  doctor.rs  feedback.rs  goal_drive.rs  goal_report.rs  landing.rs  main.rs  orchestration.rs  project_context.rs  provider.rs  repl.rs  report.rs  review_target.rs  rsi_bootstrap.rs  rsi_observation.rs  rsi_policy.rs  rsi_remote.rs  session.rs  setup.rs  skeptic_review.rs  sync.rs  sync_store.rs  ui.rs  workflow.rs  worktree.rs
crates/hi-cli/tests/: memory_e2e.rs
crates/hi-codebase-graph/: Cargo.toml
crates/hi-codebase-graph/src/: index_manager.rs  interner.rs  lib.rs  paths.rs
crates/hi-crash-handler/: Cargo.toml
crates/hi-crash-handler/src/: handler.rs  lib.rs
crates/hi-cuda/: Cargo.toml  build.rs
crates/hi-cuda/src/: decode_timers.rs  dsv4_backend.rs  dsv4_cpu.rs  dsv4_dflash.rs  dsv4_dspark.rs  dsv4_gpu.rs  dsv4_mtp.rs  expert_pool.rs  expert_ram_tier.rs  expert_uring.rs  gpu.rs  kernels.cu  kernels.rs  lib.rs  load_source.rs  prefix_cache.rs  qwen_cpu.rs  runtime.rs  safetensors.rs
crates/hi-eval/: Cargo.toml
crates/hi-eval/src/: agent_path.rs  artifacts.rs  baseline.rs  config.rs  lib.rs  main.rs  reporting.rs  results.rs  runner.rs  selftest.rs  skeptic_detector.rs
crates/hi-fsnotify/: Cargo.toml
crates/hi-fsnotify/src/: event.rs  lib.rs  state.rs
crates/hi-gguf/: Cargo.toml
crates/hi-gguf/examples/: tokenize.rs  validate.rs
crates/hi-gguf/src/: dequantize.rs  lib.rs  tokenizer.rs  weights.rs
crates/hi-gix-status/: Cargo.toml
crates/hi-gix-status/src/: lib.rs
crates/hi-hooks/: Cargo.toml
crates/hi-hooks/src/: config.rs  discovery.rs  event.rs  lib.rs  matcher.rs  result.rs  runner.rs
crates/hi-hunk-tracker/: Cargo.toml
crates/hi-hunk-tracker/src/: lib.rs
crates/hi-local/: Cargo.toml
crates/hi-local-core/: Cargo.toml
crates/hi-local-core/src/: backend.rs  lib.rs  model.rs  prompt.rs  server.rs  tool_parser.rs
crates/hi-local/src/: main.rs
crates/hi-local/tests/: cuda_real_smoke.rs  inspect.rs  qwen_cpu.rs
crates/hi-mcp/: Cargo.toml
crates/hi-mcp/src/: lib.rs
crates/hi-mermaid/: Cargo.toml
crates/hi-mermaid/src/: lib.rs
crates/hi-mlx/: Cargo.toml  build.rs
crates/hi-mlx/examples/: verify_glm52.rs
crates/hi-mlx/src/: backend.rs  config.rs  expert_pool.rs  expert_stream.rs  generate.rs  inkling_media.rs  lib.rs  main.rs  manifest.rs  models.rs  prompt.rs  repack.rs  server.rs  tool_parser.rs  weights.rs
crates/hi-protocol/: Cargo.toml
crates/hi-protocol/src/: lib.rs
crates/hi-ptyctl/: Cargo.toml
crates/hi-ptyctl/src/: lib.rs
crates/hi-replay/: Cargo.toml
crates/hi-replay/src/: lib.rs
crates/hi-repo-intelligence/: Cargo.toml
crates/hi-repo-intelligence/src/: languages.rs  lib.rs
crates/hi-shell/: Cargo.toml
crates/hi-shell/src/: lib.rs  main.rs  server.rs
crates/hi-sqlite-journal/: Cargo.toml
crates/hi-sqlite-journal/src/: lib.rs
crates/hi-tool-host/: Cargo.toml
crates/hi-tool-host/src/: lib.rs
crates/hi-tools/: Cargo.toml
crates/hi-tools/examples/: condense.rs
crates/hi-tools/src/: attribution.rs  background.rs  background_tasks.rs  catalog.rs  checkpoint.rs  codebase_graph.rs  condense.rs  edit.rs  effects.rs  fast_feedback.rs  folder_trust.rs  guard.rs  hf.rs  internal_snapshot.rs  lib.rs  local_server.rs  lsp.rs  paths.rs  process.rs  read.rs  repo_map.rs  sandbox.rs  structured_failure.rs  stub_scan.rs  tools.rs  transaction.rs  web.rs  worktree.rs
crates/hi-tui/: Cargo.toml
crates/hi-tui/src/: action.rs  activity.rs  completion.rs  daemon.rs  dashboard.rs  dashboard_goal.rs  dispatch.rs  domain.rs  event.rs  input.rs  keys.rs  lib.rs  lock.rs  loops.rs  mode.rs  model_picker.rs  notify.rs  palette.rs  provider_form.rs  provider_picker.rs  render.rs  sync_tui.rs  tests.rs  theme.rs  util.rs  view_cache.rs  watch.rs  workflow_tui.rs
crates/hi-voice/: Cargo.toml
crates/hi-voice/examples/: mic_probe.rs  transcribe_raw.rs
crates/hi-voice/src/: audio.rs  lib.rs  model.rs  stt.rs
crates/hi-workflow/: Cargo.toml
crates/hi-workflow/examples/: validate.rs
crates/hi-workflow/scripts/: deep-research.rhai  port-feature.rhai  review-and-fix.rhai
crates/hi-workflow/src/: engine.rs
crates/pi-cli/: Cargo.toml
crates/pi-cli/src/: bestof.rs  config.rs  main.rs  session.rs  ui.rs
(+476 files in other folders)
