[workspace]
resolver = "3"
members = ["crates/*"]
default-members = ["crates/hi-cli"]

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs", "io-std", "io-util", "time", "signal", "net"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"
eventsource-stream = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
axum = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
safetensors = "0.4"
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
memmap2 = "0.9"
toml = "0.8"
rustyline = "14"
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

hi-ai = { path = "crates/hi-ai" }
hi-tools = { path = "crates/hi-tools" }
hi-agent = { path = "crates/hi-agent" }
hi-tui = { path = "crates/hi-tui" }
hi-lsp = { path = "crates/hi-lsp" }
hi-local-core = { path = "crates/hi-local-core" }

# Bump the vendored MLX C++ source (built by pmetal-mlx-sys) from v0.30.6 to v0.31.2 to fix
# bf16 Metal-kernel JIT compilation against the Metal Toolchain 17C / macOS 26 (matches the
# working pip MLX 0.31.2). See vendor/pmetal-mlx-sys.
[patch.crates-io]
pmetal-mlx-sys = { path = "vendor/pmetal-mlx-sys" }
# pmetal-mlx-rs 0.25.8 calls mlx_quantize/mlx_dequantize with the pre-0.6.0 arg count; the
# vendored copy adds the `global_scale` param that mlx-c 0.6.0 introduced.
pmetal-mlx-rs = { path = "vendor/pmetal-mlx-rs" }
