[workspace]
resolver = "3"
members = ["crates/*"]
default-members = ["crates/hi-cli"]

[workspace.package]
edition = "2024"
version = "0.3.1"

# Guardrail: forbid `unsafe` in every crate by default. Crates that legitimately
# use unsafe (mmap/alloc, libc kill, MLX FFI bindings, or test-only env set_var
# guards) opt out with `[lints.rust] unsafe_code = "allow"` in their own
# Cargo.toml and a comment naming the reason. Currently opted out: hi-cli,
# hi-cuda, hi-eval, hi-gguf, hi-mlx, hi-tools, hi-tui (real unsafe) and
# hi-agent, hi-ai (test-only).
[workspace.lints.rust]
unsafe_code = "deny"

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs", "io-std", "io-util", "time", "signal", "net", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"
eventsource-stream = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
axum = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
safetensors = "0.4"
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
memmap2 = "0.9"
toml = "0.8"
thiserror = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
tempfile = "3"
rustyline = "14"
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

hi-ai = { version = "0.3.1", path = "crates/hi-ai" }
hi-tools = { version = "0.3.1", path = "crates/hi-tools" }
hi-agent = { version = "0.3.1", path = "crates/hi-agent" }
hi-tui = { version = "0.3.1", path = "crates/hi-tui" }
hi-lsp = { version = "0.3.1", path = "crates/hi-lsp" }
hi-local-core = { path = "crates/hi-local-core" }
hi-trace = { version = "0.3.1", path = "crates/hi-trace" }
hi-rsi-runtime = { version = "0.3.1", path = "crates/hi-rsi-runtime" }
hi-protocol = { version = "0.3.1", path = "crates/hi-protocol" }
hi-agent-runtime = { version = "0.3.1", path = "crates/hi-agent-runtime" }
hi-tool-host = { version = "0.3.1", path = "crates/hi-tool-host" }
hi-verifier = { version = "0.3.1", path = "crates/hi-verifier" }
hi-replay = { version = "0.3.1", path = "crates/hi-replay" }
hi-repo-intelligence = { version = "0.3.1", path = "crates/hi-repo-intelligence" }
hi-memory = { version = "0.3.1", path = "crates/hi-memory" }
hi-secrets = { version = "0.3.1", path = "crates/hi-secrets" }
hi-hooks = { version = "0.3.1", path = "crates/hi-hooks" }

# Bump the vendored MLX C++ source (built by pmetal-mlx-sys) from v0.30.6 to v0.31.2 to fix
# bf16 Metal-kernel JIT compilation against the Metal Toolchain 17C / macOS 26 (matches the
# working pip MLX 0.31.2). See vendor/pmetal-mlx-sys.
[patch.crates-io]
pmetal-mlx-sys = { path = "vendor/pmetal-mlx-sys" }
# pmetal-mlx-rs 0.25.8 calls mlx_quantize/mlx_dequantize with the pre-0.6.0 arg count; the
# vendored copy adds the `global_scale` param that mlx-c 0.6.0 introduced.
pmetal-mlx-rs = { path = "vendor/pmetal-mlx-rs" }
