[workspace]
resolver = "3"
members = ["crates/*"]
default-members = ["crates/hi-cli"]

[workspace.package]
edition = "2024"
version = "0.3.1"

# Guardrail: forbid `unsafe` in every crate by default. Crates that legitimately
# use unsafe (mmap/alloc, libc kill, MLX FFI bindings, or test-only env set_var
# guards) opt out with `[lints.rust] unsafe_code = "allow"` in their own
# Cargo.toml and a comment naming the reason. Currently opted out: hi-cli,
# hi-cuda, hi-eval, hi-gguf, hi-mlx, hi-tools, hi-tui (real unsafe) and
# hi-agent, hi-ai (test-only).
[workspace.lints.rust]
unsafe_code = "deny"

[workspace.dependencies]
rustfft = "6"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs", "io-std", "io-util", "time", "signal", "net", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"
eventsource-stream = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
axum = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
safetensors = "0.4"
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
memmap2 = "0.9"
toml = "0.8"
thiserror = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
tempfile = "3"
rustyline = "14"
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }

hi-ai = { version = "0.3.1", path = "crates/hi-ai" }
hi-tools = { version = "0.3.1", path = "crates/hi-tools" }
hi-agent = { version = "0.3.1", path = "crates/hi-agent" }
hi-tui = { version = "0.3.1", path = "crates/hi-tui" }
hi-lsp = { version = "0.3.1", path = "crates/hi-lsp" }
hi-local-core = { path = "crates/hi-local-core" }
hi-trace = { version = "0.3.1", path = "crates/hi-trace" }
hi-rsi-runtime = { version = "0.3.1", path = "crates/hi-rsi-runtime" }
hi-protocol = { version = "0.3.1", path = "crates/hi-protocol" }
hi-agent-runtime = { version = "0.3.1", path = "crates/hi-agent-runtime" }
hi-tool-host = { version = "0.3.1", path = "crates/hi-tool-host" }
hi-verifier = { version = "0.3.1", path = "crates/hi-verifier" }
hi-replay = { version = "0.3.1", path = "crates/hi-replay" }
hi-repo-intelligence = { version = "0.3.1", path = "crates/hi-repo-intelligence" }
hi-memory = { version = "0.3.1", path = "crates/hi-memory" }
hi-secrets = { version = "0.3.1", path = "crates/hi-secrets" }
hi-hooks = { version = "0.3.1", path = "crates/hi-hooks" }
hi-crash-handler = { version = "0.3.1", path = "crates/hi-crash-handler" }
hi-sqlite-journal = { version = "0.3.1", path = "crates/hi-sqlite-journal" }
hi-update = { version = "0.3.1", path = "crates/hi-update" }
hi-models = { version = "0.3.1", path = "crates/hi-models" }
hi-prompt-queue = { version = "0.3.1", path = "crates/hi-prompt-queue" }
hi-announcements = { version = "0.3.1", path = "crates/hi-announcements" }
hi-system-power = { version = "0.3.1", path = "crates/hi-system-power" }
hi-fsnotify = { version = "0.3.1", path = "crates/hi-fsnotify" }
hi-mermaid = { version = "0.3.1", path = "crates/hi-mermaid" }
hi-fast-worktree = { version = "0.3.1", path = "crates/hi-fast-worktree" }
hi-ptyctl = { version = "0.3.1", path = "crates/hi-ptyctl" }
hi-voice = { version = "0.3.1", path = "crates/hi-voice" }
hi-agent-lifecycle = { version = "0.3.1", path = "crates/hi-agent-lifecycle" }
hi-gix-status = { version = "0.3.1", path = "crates/hi-gix-status" }
hi-hunk-tracker = { version = "0.3.1", path = "crates/hi-hunk-tracker" }
hi-codebase-graph = { version = "0.3.1", path = "crates/hi-codebase-graph" }
hi-test-utils = { version = "0.3.1", path = "crates/hi-test-utils" }
hi-mcp = { version = "0.3.1", path = "crates/hi-mcp" }
hi-workflow = { version = "0.3.1", path = "crates/hi-workflow" }
notify = "8"
notify-debouncer-full = "0.5"
chrono = { version = "0.4", features = ["serde"] }
dunce = "1"
rustc-hash = "2"
gix = { version = "0.83", default-features = false, features = ["sha1", "status", "index", "parallel"] }
similar = "2.7"
tokio-util = { version = "0.7", features = ["rt"] }
uuid = { version = "1", features = ["serde", "v4", "v5"] }
jsonschema = { version = "0.48.2", default-features = false }
libc = "0.2"
petgraph = { version = "0.6.5", default-features = false, features = ["serde-1", "stable_graph"] }
rayon = "1"
crossbeam = "0.8"
num_cpus = "1"
ignore = "0.4"
once_cell = "1"
dashmap = "6"
smallvec = "1"
ahash = { version = "0.8", features = ["serde"] }
hashbrown = "0.15"
nohash-hasher = "0.2"
git2 = { version = "0.21", default-features = false }
mimalloc = "0.1"
tree-sitter = "0.25.10"
tree-sitter-rust = "0.24.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-python = "0.25.0"
tree-sitter-go = "0.25.0"
tree-sitter-javascript = "0.25.0"
sha2 = "0.10"
regex = "1"
tower = { version = "0.5", features = ["util"] }
url = "2"
which = "7"
flate2 = "1"
tar = "0.4"
globset = "0.4"
reflink-copy = "0.1"
rand = "0.8"
cc = "1"
ansi-to-tui = "8"
rhai = { version = "1.25", features = ["serde"] }
image = { version = "0.25", default-features = false, features = ["bmp", "gif", "jpeg", "png", "webp"] }
cpal = "0.18"
whisper-rs = "0.16"

# Bump the vendored MLX C++ source (built by pmetal-mlx-sys) from v0.30.6 to v0.31.2 to fix
# bf16 Metal-kernel JIT compilation against the Metal Toolchain 17C / macOS 26 (matches the
# working pip MLX 0.31.2). See vendor/pmetal-mlx-sys.
[patch.crates-io]
pmetal-mlx-sys = { path = "vendor/pmetal-mlx-sys" }
# pmetal-mlx-rs 0.25.8 calls mlx_quantize/mlx_dequantize with the pre-0.6.0 arg count; the
# vendored copy adds the `global_scale` param that mlx-c 0.6.0 introduced.
pmetal-mlx-rs = { path = "vendor/pmetal-mlx-rs" }
