[package]
name = "hi-agent"
edition.workspace = true
version.workspace = true

[dependencies]
hi-ai.workspace = true
hi-tools.workspace = true
hi-lsp.workspace = true
anyhow.workspace = true
async-trait = { workspace = true }
serde.workspace = true
serde_json.workspace = true
futures-util.workspace = true
tokio = { workspace = true }
ignore = "0.4"
sha2 = "0.10"

[dev-dependencies]
async-trait = { workspace = true }
