[package]
name = "hi-ai"
edition.workspace = true
version.workspace = true

[dependencies]
tokio.workspace = true
reqwest.workspace = true
futures-util.workspace = true
eventsource-stream.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
