[package]
name = "hi-ai"
edition.workspace = true
version.workspace = true

[features]
# Exposes `test_support` (a fake OpenAI server) publicly so other crates' tests
# can drive the real binary against canned responses. Off in normal builds.
test-support = []

[dependencies]
tokio.workspace = true
reqwest.workspace = true
futures-util.workspace = true
eventsource-stream.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
async-trait.workspace = true
blake3.workspace = true
uuid.workspace = true
jsonschema.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }


[lints.rust]
# Test-only unsafe: env set_var/remove_var guards in test helpers.
unsafe_code = "allow"
