[package]
name = "hi"
edition.workspace = true
version.workspace = true

[[bin]]
name = "hi"
path = "src/main.rs"

[dependencies]
hi-ai.workspace = true
hi-agent.workspace = true
hi-trace.workspace = true
hi-tools.workspace = true
hi-tui.workspace = true
anyhow.workspace = true
async-trait = { workspace = true }
tokio.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
rustyline.workspace = true
reqwest = { workspace = true }
futures-util = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"

[dev-dependencies]
# The fake OpenAI server, for the end-to-end test that drives the real binary.
hi-ai = { workspace = true, features = ["test-support"] }
