[package]
name = "hi-cuda"
edition.workspace = true
version = "0.1.0"
build = "build.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
futures-util.workspace = true
hi-gguf = { path = "../hi-gguf" }
hi-local-core.workspace = true
image = { version = "0.25", default-features = false, features = ["bmp", "gif", "jpeg", "png", "webp"] }
memmap2.workspace = true
rand = "0.8"
rayon = "1"
reqwest = { workspace = true, features = ["blocking"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
# io_uring batch-submitted O_DIRECT expert reads (HI_CUDA_EXPERT_IOURING=1)
# and the O_DIRECT/fadvise constants the ring fetcher needs (mirrors the
# hi-gguf twin-fd pattern; the constants differ per architecture).
io-uring = "0.7"
libc = "0.2"

[dev-dependencies]
axum.workspace = true
tower = { version = "0.5", features = ["util"] }

[build-dependencies]
cc = "1"

[features]
default = []
native-cuda = []
