[package]
name = "hi-cuda"
edition.workspace = true
version = "0.1.0"
build = "build.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
futures-util.workspace = true
hi-gguf = { path = "../hi-gguf" }
hi-local-core.workspace = true
image.workspace = true
memmap2.workspace = true
rand.workspace = true
rayon.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
# io_uring batch-submitted O_DIRECT expert reads (HI_CUDA_EXPERT_IOURING=1)
# and the O_DIRECT/fadvise constants the ring fetcher needs (mirrors the
# hi-gguf twin-fd pattern; the constants differ per architecture).
io-uring = "0.7"
libc.workspace = true

[dev-dependencies]
axum.workspace = true
tower.workspace = true

[build-dependencies]
cc.workspace = true

[features]
default = []
native-cuda = []

[lints.rust]
# Real unsafe lives here (mmap/alloc, libc kill on timeout); see workspace root.
unsafe_code = "allow"
