[package]
name = "hi-eval"
edition.workspace = true
version.workspace = true

[lib]
name = "hi_eval"
path = "src/lib.rs"

[[bin]]
name = "hi-eval"
path = "src/main.rs"

[dependencies]
hi-ai.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync"] }
globset = "0.4"
libc = "0.2"
