[package]
name = "hi-gguf"
edition.workspace = true
version = "0.1.0"

[dependencies]
anyhow.workspace = true
hi-local-core.workspace = true
memmap2.workspace = true
serde.workspace = true
serde_json.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
# O_DIRECT flag for the twin-fd expert read path (the constant differs per
# architecture, so it must come from libc rather than a hardcoded value).
libc = "0.2"

[lints.rust]
# Real unsafe lives here (mmap/alloc, libc kill on timeout); see workspace root.
unsafe_code = "allow"
