[package]
name = "hi-local-core"
edition.workspace = true
version = "0.1.0"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
base64.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[features]
default = []
test-support = []

[dev-dependencies]
tower.workspace = true

[lints]
workspace = true
