[package]
name = "hi-local"
edition.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
hi-cuda = { path = "../hi-cuda" }
hi-gguf = { path = "../hi-gguf" }
hi-local-core.workspace = true
hi-mlx = { path = "../hi-mlx" }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[features]
default = []
native-cuda = ["hi-cuda/native-cuda"]
