[package]
name = "hi-mermaid"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
tracing.workspace = true
tempfile.workspace = true
which.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
