[package]
name = "hi-repo-intelligence"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
blake3.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tree-sitter = "0.25"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"

[dev-dependencies]
tempfile.workspace = true


[lints]
workspace = true
