[package]
name = "hi-repo-intelligence"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
blake3.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
hi-sqlite-journal.workspace = true
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-python.workspace = true
tree-sitter-go.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-typescript.workspace = true

[dev-dependencies]
tempfile.workspace = true


[lints]
workspace = true
