[package]
name = "hi-tools"
edition.workspace = true
version.workspace = true

[dependencies]
hi-ai.workspace = true
hi-lsp.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
similar = "2"
ignore = "0.4"
regex = "1"
sha2 = "0.10"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
