[package]
name = "hi-tools"
edition.workspace = true
version.workspace = true

[dependencies]
hi-ai.workspace = true
hi-lsp.workspace = true
hi-secrets.workspace = true
hi-codebase-graph.workspace = true
hi-hunk-tracker.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
async-trait.workspace = true
similar.workspace = true
ignore.workspace = true
regex.workspace = true
sha2.workspace = true
reflink-copy.workspace = true
toml.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true


[lints.rust]
# Real unsafe lives here (libc kill / MLX FFI bindings); see workspace root.
unsafe_code = "allow"

[dev-dependencies]
tempfile.workspace = true
