[package]
name = "hi-tui"
edition.workspace = true
version.workspace = true

[dependencies]
hi-agent.workspace = true
hi-ai.workspace = true
hi-tools.workspace = true
serde_json.workspace = true
ratatui = { workspace = true, features = ["unstable-rendered-line-info"] }
crossterm.workspace = true
futures-util.workspace = true
tokio.workspace = true
anyhow.workspace = true
ansi-to-tui = "7"
