[package]
name = "hi-tui"
edition.workspace = true
version.workspace = true

[dependencies]
hi-agent.workspace = true
hi-ai.workspace = true
hi-tools.workspace = true
hi-workflow.workspace = true
hi-voice.workspace = true
serde.workspace = true
serde_json.workspace = true
ratatui = { workspace = true, features = ["unstable-rendered-line-info"] }
crossterm.workspace = true
futures-util.workspace = true
tokio.workspace = true
tokio-util.workspace = true
anyhow.workspace = true
ansi-to-tui.workspace = true
reqwest = { workspace = true }


[lints.rust]
# Real unsafe lives here (env set_var in single-threaded TUI cmd path); see workspace root.
unsafe_code = "allow"
